// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactsEditView should match a snapshot with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-fade-in el-grid"
      >
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Name
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                Mr Foo Bar
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Active Status
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                <span
                  class="el-intent-success el-status-indicator"
                />
                 
                Active
                 
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.41 2L12 12.59 5.41 6h13.18ZM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18H4Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Email
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                foo@bar.com
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Mobile
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                242423424
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Home
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                234234234
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Work
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                2342342344
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Primary Address
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                Bar Foo Foo Bar Foo Bar Foo
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Secondary Address
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                Bar Foo Foo Bar Foo Bar Foo
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Work Address
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                Bar Foo Foo Bar Foo Bar Foo
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Negotiators
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                <div
                  class="el-badge-group"
                >
                  <div
                    class="el-badge-group-inner"
                  >
                    <span
                      class="el-intent-primary el-badge"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18 14.5a2.49 2.49 0 0 0 2.35-2.35c.094-.545.144-1.097.15-1.65a2.5 2.5 0 0 0-5 0c.006.553.056 1.105.15 1.65A2.49 2.49 0 0 0 18 14.5ZM8 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-2a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25a3.5 3.5 0 1 0-7 0c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 8 13Zm10 3a8.38 8.38 0 0 0-1.61.15A5.63 5.63 0 0 1 18 20h6c0-2.21-2.69-4-6-4Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Offices
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                <div
                  class="el-badge-group"
                >
                  <div
                    class="el-badge-group-inner"
                  >
                    <span
                      class="el-intent-primary el-badge"
                    >
                      London Estate Agent
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Categories
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                <div
                  class="el-badge-group"
                >
                  <div
                    class="el-badge-group-inner"
                  >
                    Unknown
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.5 20c-1.517 0-2.813-.525-3.888-1.575C1.537 17.375 1 16.092 1 14.575c0-1.3.392-2.458 1.175-3.475S3.983 9.433 5.25 9.15c.417-1.533 1.25-2.775 2.5-3.725C9 4.475 10.417 4 12 4c1.95 0 3.604.68 4.962 2.037C18.322 7.396 19 9.05 19 11c1.15.133 2.104.63 2.863 1.488A4.407 4.407 0 0 1 23 15.5c0 1.25-.438 2.313-1.313 3.188S19.75 20 18.5 20h-12Zm0-2h12c.7 0 1.292-.242 1.775-.725.483-.483.725-1.075.725-1.775s-.242-1.292-.725-1.775C19.792 13.242 19.2 13 18.5 13H17v-2c0-1.383-.488-2.563-1.463-3.537C14.563 6.487 13.383 6 12 6s-2.563.487-3.537 1.463C7.488 8.437 7 9.617 7 11h-.5c-.967 0-1.792.342-2.475 1.025A3.372 3.372 0 0 0 3 14.5c0 .967.342 1.792 1.025 2.475A3.372 3.372 0 0 0 6.5 18Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Sources
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                <div
                  class="el-badge-group"
                >
                  <div
                    class="el-badge-group-inner"
                  >
                    Unknown
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-col"
        >
          <div
            class="el-flex-container"
          >
            <div
              class="el-key-value-icon-wrap"
            >
              <span
                class="el-intent-primary el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M16 3H8a7 7 0 0 0 0 14h.88l1.78 3.55a1.44 1.44 0 0 0 2.68 0L15.12 17H16a7 7 0 1 0 0-14Zm0 12h-2.12L12 18.76 10.12 15H8A5 5 0 0 1 8 5h8a5 5 0 0 1 0 10Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
            <div
              class="el-flex-column el-flex-container"
            >
              <div
                class="el-has-grey-text el-text-xs el-text-base"
              >
                Marketing Preferences
              </div>
              <div
                class="el-text-sm el-text-base"
              >
                <div
                  class="el-badge-group"
                >
                  <div
                    class="el-badge-group-inner"
                  >
                    <span
                      class="el-intent-primary el-badge"
                    >
                      Marketing Consent
                    </span>
                    <span
                      class="el-intent-primary el-badge"
                    >
                      Prefers Letter
                    </span>
                    <span
                      class="el-intent-primary el-badge"
                    >
                      Prefers Email
                    </span>
                    <span
                      class="el-intent-primary el-badge"
                    >
                      Prefers Phone
                    </span>
                    <span
                      class="el-intent-primary el-badge"
                    >
                      Prefers SMS
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-fade-in el-grid"
    >
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Name
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              Mr Foo Bar
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Active Status
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              <span
                class="el-intent-success el-status-indicator"
              />
               
              Active
               
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2Zm-1.41 2L12 12.59 5.41 6h13.18ZM4 18V7.41L10.59 14a2 2 0 0 0 2.82 0L20 7.41V18H4Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Email
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              foo@bar.com
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Mobile
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              242423424
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Home
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              234234234
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 16.81a3.281 3.281 0 0 0-.3-.81l-6-1a3.49 3.49 0 0 0-.85 1.78 10.74 10.74 0 0 1-6.65-6.63A3.5 3.5 0 0 0 9 9.29l-1-6a3.19 3.19 0 0 0-.83-.24A2.924 2.924 0 0 0 6.6 3 3.6 3.6 0 0 0 3 6.6C3 14.553 9.447 21 17.4 21a3.6 3.6 0 0 0 3.6-3.6 3.798 3.798 0 0 0 0-.59Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Work
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              2342342344
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Primary Address
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              Bar Foo Foo Bar Foo Bar Foo
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Secondary Address
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              Bar Foo Foo Bar Foo Bar Foo
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m22.923 9.165-10.5-7a1 1 0 0 0-1.1 0l-10.45 7a1 1 0 0 0 1.1 1.66l.9-.63v11.3a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-11.3l.95.63a.94.94 0 0 0 .55.17 1 1 0 0 0 .55-1.83Zm-4.05 11.33h-14V8.865l7-4.67 7 4.67v11.63Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Work Address
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              Bar Foo Foo Bar Foo Bar Foo
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-11a3.49 3.49 0 0 0-3.5 3.5c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 12 13a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25A3.49 3.49 0 0 0 12 4Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Negotiators
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              <div
                class="el-badge-group"
              >
                <div
                  class="el-badge-group-inner"
                >
                  <span
                    class="el-intent-primary el-badge"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 14.5a2.49 2.49 0 0 0 2.35-2.35c.094-.545.144-1.097.15-1.65a2.5 2.5 0 0 0-5 0c.006.553.056 1.105.15 1.65A2.49 2.49 0 0 0 18 14.5ZM8 15c-4.42 0-8 2.24-8 5h16c0-2.76-3.58-5-8-5Zm0-2a3.48 3.48 0 0 0 3.3-3.25c.131-.743.198-1.496.2-2.25a3.5 3.5 0 1 0-7 0c.002.754.069 1.507.2 2.25A3.48 3.48 0 0 0 8 13Zm10 3a8.38 8.38 0 0 0-1.61.15A5.63 5.63 0 0 1 18 20h6c0-2.21-2.69-4-6-4Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Offices
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              <div
                class="el-badge-group"
              >
                <div
                  class="el-badge-group-inner"
                >
                  <span
                    class="el-intent-primary el-badge"
                  >
                    London Estate Agent
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4 11a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm0-4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm0 10a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm16-6H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2ZM8 7h12a1 1 0 1 0 0-2H8a1 1 0 0 0 0 2Zm12 10H8a1 1 0 1 0 0 2h12a1 1 0 1 0 0-2Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Categories
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              <div
                class="el-badge-group"
              >
                <div
                  class="el-badge-group-inner"
                >
                  Unknown
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 20c-1.517 0-2.813-.525-3.888-1.575C1.537 17.375 1 16.092 1 14.575c0-1.3.392-2.458 1.175-3.475S3.983 9.433 5.25 9.15c.417-1.533 1.25-2.775 2.5-3.725C9 4.475 10.417 4 12 4c1.95 0 3.604.68 4.962 2.037C18.322 7.396 19 9.05 19 11c1.15.133 2.104.63 2.863 1.488A4.407 4.407 0 0 1 23 15.5c0 1.25-.438 2.313-1.313 3.188S19.75 20 18.5 20h-12Zm0-2h12c.7 0 1.292-.242 1.775-.725.483-.483.725-1.075.725-1.775s-.242-1.292-.725-1.775C19.792 13.242 19.2 13 18.5 13H17v-2c0-1.383-.488-2.563-1.463-3.537C14.563 6.487 13.383 6 12 6s-2.563.487-3.537 1.463C7.488 8.437 7 9.617 7 11h-.5c-.967 0-1.792.342-2.475 1.025A3.372 3.372 0 0 0 3 14.5c0 .967.342 1.792 1.025 2.475A3.372 3.372 0 0 0 6.5 18Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Sources
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              <div
                class="el-badge-group"
              >
                <div
                  class="el-badge-group-inner"
                >
                  Unknown
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-col"
      >
        <div
          class="el-flex-container"
        >
          <div
            class="el-key-value-icon-wrap"
          >
            <span
              class="el-intent-primary el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 3H8a7 7 0 0 0 0 14h.88l1.78 3.55a1.44 1.44 0 0 0 2.68 0L15.12 17H16a7 7 0 1 0 0-14Zm0 12h-2.12L12 18.76 10.12 15H8A5 5 0 0 1 8 5h8a5 5 0 0 1 0 10Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            class="el-flex-column el-flex-container"
          >
            <div
              class="el-has-grey-text el-text-xs el-text-base"
            >
              Marketing Preferences
            </div>
            <div
              class="el-text-sm el-text-base"
            >
              <div
                class="el-badge-group"
              >
                <div
                  class="el-badge-group-inner"
                >
                  <span
                    class="el-intent-primary el-badge"
                  >
                    Marketing Consent
                  </span>
                  <span
                    class="el-intent-primary el-badge"
                  >
                    Prefers Letter
                  </span>
                  <span
                    class="el-intent-primary el-badge"
                  >
                    Prefers Email
                  </span>
                  <span
                    class="el-intent-primary el-badge"
                  >
                    Prefers Phone
                  </span>
                  <span
                    class="el-intent-primary el-badge"
                  >
                    Prefers SMS
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ContactsEditView should match a snapshot with no data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
